obi-network-metrics/manifests/grafana-otel-lgtm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-otel-lgtm
  labels:
    app: grafana-otel-lgtm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana-otel-lgtm
  template:
    metadata:
      labels:
        app: grafana-otel-lgtm
    spec:
      containers:
        - name: otel-lgtm
          image: docker.io/grafana/otel-lgtm:latest
          ports:
            - name: grafana
              containerPort: 3000
            - name: otlp-grpc
              containerPort: 4317
            - name: otlp-http
              containerPort: 4318
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-otel-lgtm
spec:
  type: ClusterIP
  selector:
    app: grafana-otel-lgtm
  ports:
    - name: grafana
      port: 3000
      targetPort: 3000
    - name: otlp-grpc
      port: 4317
      targetPort: 4317
    - name: otlp-http
      port: 4318
      targetPort: 4318
